# Watchdog

./: README.md
nodejs-wd/: app.js  package-lock.json  package.json  sderc.env
nodejs-wd/public/: watchdog.html
nodejs-wd/routes/: api_portal.js  api_v1.js  index.js  mdb.js
nrf-wd/: .gitignore  CMakeLists.txt  prj.conf
nrf-wd/cert/: WD-Rantakangas
nrf-wd/src/: at_cmd.c  at_cmd.h  btn_handler.c  btn_handler.h  http_request - Copy - Copy.c  http_request - Copy - Copy.h  http_request.c  http_request.h  led.c  led.h  main - Copy.c  main.c  movement.c  movement.h  payloads.c  payloads.h  settings.c  settings.h  supl_support.c  wsensor.c  wsensor.h
react-wd/: .gitignore  package-lock.json  package.json
react-wd/src/: App.js  Config.js  DataHandler.js  index.css  index.js
react-wd/src/components/: AddDevice.js  Alerts.js  Announcement.js  Bottombar.js  Clock.js  Devices.js  Environment.js  Example.js  GeneralButton.js  GeneralInfoBox.js  Header.js  Headerbar.js  Loading.js  Location.js  Login.js  Modal.js  Register.js  SettingInput.js  Settings.js  System.js  Topbar.js  Underline.js  UserState.js  Watchdog.js  Wdmap.js
react-wd/src/components/grids/: Bottombar.js  Middlebar.js  Topbar.js
react-wd/ui/: asset-manifest.json  index.html  precache-manifest.d349f4c2312b7a2fe4c0b0d0e104ba5f.js  service-worker.js
react-wd/ui/static/css/: main.cd735c30.chunk.css  main.cd735c30.chunk.css.map
react-wd/ui/static/js/: 2.1bf20559.chunk.js  2.1bf20559.chunk.js.map  main.272c22a4.chunk.js  main.272c22a4.chunk.js.map  runtime-main.ba23ed98.js  runtime-main.ba23ed98.js.map
